# codecrafters-bittorrent

./: CMakeLists.txt  README.md
src/: Main.cpp
src/bencode/: Bencode.hpp  BencodeDecoder.cpp  BencodeDecoder.hpp  BencodeEncoder.cpp  BencodeEncoder.hpp  BencodeParser.cpp  BencodeParser.hpp
src/commands/: Command.hpp  CommandOptions.hpp  DecodeCommand.cpp  DecodeCommand.hpp  DownloadCommand.cpp  DownloadCommand.hpp  DownloadPieceCommand.cpp  DownloadPieceCommand.hpp  HandshakeCommand.cpp  HandshakeCommand.hpp  InfoCommand.cpp  InfoCommand.hpp  MagnetDownloadCommand.cpp  MagnetDownloadCommand.hpp  MagnetDownloadPieceCommand.cpp  MagnetDownloadPieceCommand.hpp  MagnetHandshakeCommand.cpp  MagnetHandshakeCommand.hpp  MagnetInfoCommand.cpp  MagnetInfoCommand.hpp  MagnetParseCommand.cpp  MagnetParseCommand.hpp  PeersCommand.cpp  PeersCommand.hpp
src/manager/: CommandManager.cpp  CommandManager.hpp  PeerManager.cpp  PeerManager.hpp  PieceManager.cpp  PieceManager.hpp
src/protocol/: PeerMessage.cpp  PeerMessage.hpp  PeerMessageType.hpp
src/utils/: MagnetUtils.cpp  MagnetUtils.hpp  PeerUtils.cpp  PeerUtils.hpp  SHA1.cpp  SHA1.hpp  TorrentUtils.cpp  TorrentUtils.hpp
